[tool.poetry]
name = "spoti.py"
version = "0.1.0"
description = "spoti.py 🎉"
authors = ["Cap <cap@lalabuff.com>", "Blau <beelau1@terpmail.umd.edu"]

[tool.poetry.dependencies]
python = ">=3.10.0"
flask = "^2.3.3"
requests = "^2.31.0"

[tool.pyright]
strict = ["**"]
venv = ".venv"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
